Fix moweb Menu height. Update gap size for cards. Replaced describedby with labeledby for Modal conponent.

--- a/components/CardsGrid/CardsContainer.module.css
+++ b/components/CardsGrid/CardsContainer.module.css
@@ -3,7 +3,7 @@
   .cards_container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-      grid-gap: 1rem;
+      grid-gap: 0.5rem;
       padding: 0.2rem 1rem;
   }
 
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   padding: 0.5rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
   border-radius: 5px;
 }
 
