--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -45,6 +45,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 3px;
 }
 
 @media screen and (max-width: 812px) {
@@ -64,6 +65,7 @@
     grid-row-end: span 1;
     grid-column-start: 1;
     grid-column-end: 2;
+    margin-top: 0.5rem;
   }
 
   .footer {
@@ -75,6 +77,6 @@
     grid-row-end: span 1;
     grid-column-start: 1;
     grid-column-end: 2;
-    margin-right: 0px;
+    margin: 10px 5px;
   }
 }
