--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -66,7 +66,7 @@
     flex-direction: column;
     width: 100%;
     position: absolute;
-    top: 80px;
+    top: 60px;
     left: 0px;
   }
 
@@ -74,13 +74,13 @@
     display: flex;
     justify-content: center;
     grid-gap: 0px;
-    padding-bottom: 80px;
+    padding-bottom: 60px;
     background: rgb(2,0,36);
     background: linear-gradient(-90deg, rgba(2,0,36,1) 0%, rgba(4,4,80,1) 45%, rgba(14,91,107,1) 100%);
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 1;
-    height: calc(100vh - 80px);
+    height: calc(100vh - 60px);
   }
 
   .nav_links {
